l3draw: Split up polar arguments

--- a/l3trial/l3draw/l3draw-paths.dtx
+++ b/l3trial/l3draw/l3draw-paths.dtx
@@ -59,12 +59,12 @@
 %    \end{macrocode}
 %
 % \begin{variable}
-%   {\l_@@_path_tmp_tl, \l_@@_path_xtmp_fp, \l_@@_path_ytmp_fp}
+%   {\l_@@_path_tmp_tl, \l_@@_path_tmpa_fp, \l_@@_path_tmpb_fp}
 %   Scratch space.
 %    \begin{macrocode}
 \tl_new:N \l_@@_path_tmp_tl
-\fp_new:N \l_@@_path_xtmp_fp
-\fp_new:N \l_@@_path_ytmp_fp
+\fp_new:N \l_@@_path_tmpa_fp
+\fp_new:N \l_@@_path_tmpb_fp
 %    \end{macrocode}
 % \end{variable}
 %
@@ -310,8 +310,8 @@
   }
 \cs_new_protected:Npn \@@_path_curveto:nnnn #1#2#3#4
   {
-    \fp_set:Nn \l_@@_path_xtmp_fp { \c_@@_path_curveto_b_fp * #1 }
-    \fp_set:Nn \l_@@_path_ytmp_fp { \c_@@_path_curveto_b_fp * #2 }
+    \fp_set:Nn \l_@@_path_tmpa_fp { \c_@@_path_curveto_b_fp * #1 }
+    \fp_set:Nn \l_@@_path_tmpb_fp { \c_@@_path_curveto_b_fp * #2 }
     \use:x
       {
          \@@_path_mark_corner:
@@ -320,23 +320,23 @@
              \fp_to_dim:n
                {
                    \c_@@_path_curveto_a_fp * \g_@@_path_lastx_dim
-                 + \l_@@_path_xtmp_fp
+                 + \l_@@_path_tmpa_fp
                }
            }
            {
              \fp_to_dim:n
                {
                    \c_@@_path_curveto_a_fp * \g_@@_path_lasty_dim
-                 + \l_@@_path_ytmp_fp
+                 + \l_@@_path_tmpb_fp
                }
            }
            {
              \fp_to_dim:n
-               { \c_@@_path_curveto_a_fp * #3 + \l_@@_path_xtmp_fp }
+               { \c_@@_path_curveto_a_fp * #3 + \l_@@_path_tmpa_fp }
            }
            {
              \fp_to_dim:n
-               { \c_@@_path_curveto_a_fp * #4 + \l_@@_path_ytmp_fp }
+               { \c_@@_path_curveto_a_fp * #4 + \l_@@_path_tmpb_fp }
            }
            {#3}
            {#4}
@@ -350,6 +350,7 @@
 % \end{macro}
 %
 % \begin{macro}{\draw_path_arc:nnn}
+% \begin{macro}{\draw_path_arc:nnnn}
 % \begin{macro}{\@@_path_arc:nnnn}
 % \begin{macro}{\@@_path_arc:nnNnn}
 % \begin{macro}
@@ -371,8 +372,8 @@
 %   the line, with the split set at a final part of $115^{\circ}$.
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_path_arc:nnn #1#2#3
-  { \@@_path_arc:nnw {#1} {#2} #3 ~ and ~ #3 ~ \q_stop }
-\cs_new_protected:Npn \@@_path_arc:nnw #1#2#3 ~ and ~ #4 ~ #5 \q_stop 
+  { \draw_path_arc:nnnn {#1} {#2} {#3} {#3} }
+\cs_new_protected:Npn \draw_path_arc:nnnn #1#2#3#4
   {
     \use:x
       {
@@ -470,7 +471,7 @@
       { \@@_path_arc_auxiii:nn }
       {
         \draw_point_transform:n
-          { \draw_point_polar:nn { #1 #4 90 } { #7 ~and~ #8 } }
+          { \draw_point_polar:nnn { #1 #4 90 } {#7} {#8} }
       }
     \@@_point_process:nn
       {
@@ -478,18 +479,18 @@
           { \@@_path_arc_auxiv:nnnn }
           {
             \draw_point_transform:n
-              { \draw_point_polar:nn {#1} { #5 ~and~ #6 } }
+              { \draw_point_polar:nnn {#1} {#5} {#6} }
           }
       }
       {
         \draw_point_transform:n
-          { \draw_point_polar:nn {#2} { #5 ~and~ #6 } }
+          { \draw_point_polar:nnn {#2} {#5} {#6} }
       }
     \@@_point_process:nn
       { \@@_path_arc_auxv:nn }
       {
         \draw_point_transform:n
-          { \draw_point_polar:nn { #2 #4 -90 } { #7 ~and~ #8 } }
+          { \draw_point_polar:nnn { #2 #4 -90 } {#7} {#8} }
       }
     \exp_after:wN \@@_path_curveto:nnnnnn \l_@@_path_tmp_tl
     \fp_set:Nn \l_@@_path_arc_delta_fp { abs ( #2 - #3 ) }
@@ -551,6 +552,7 @@
 %    \end{macrocode}
 % \end{variable}
 % \end{variable}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
