l3draw: Arc axes and support functions

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -257,6 +257,12 @@
 %   % Note interface
 % \end{function}
 %
+% \begin{function}{\draw_path_arc_axes:nnnn}
+%   \begin{syntax}
+%     \cs{draw_path_arc_axes:nnn} \Arg{angle1} \Arg{angle2} \Arg{point expr1} \Arg{point expr2}
+%   \end{syntax}
+% \end{function}
+%
 % \begin{function}{\draw_path_close:}
 %   \begin{syntax}
 %     \cs{draw_path_close:}
@@ -282,6 +288,13 @@
 %   \begin{syntax}
 %     \cs{draw_transform:nnnnn}
 %       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{coord expr}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}{\draw_transform_triangle:nnn}
+%   \begin{syntax}
+%     \cs{draw_transform:nnn}
+%       \Arg{origin} \Arg{point expr1} \Arg{point expr2}
 %   \end{syntax}
 % \end{function}
 %
