Avoid cm shift in some internals

--- a/l3trial/l3draw/l3draw-paths.dtx
+++ b/l3trial/l3draw/l3draw-paths.dtx
@@ -481,7 +481,7 @@
     \@@_point_process:nn
       { \@@_path_arc_auxiii:nn }
       {
-        \draw_point_transform:n
+        \@@_point_transform_noshift:n
           { \draw_point_polar:nnn { #1 #4 90 } {#7} {#8} }
       }
     \@@_point_process:nn
@@ -500,7 +500,7 @@
     \@@_point_process:nn
       { \@@_path_arc_auxv:nn }
       {
-        \draw_point_transform:n
+        \@@_point_transform_noshift:n
           { \draw_point_polar:nnn { #2 #4 -90 } {#7} {#8} }
       }
     \exp_after:wN \@@_path_curveto:nnnnnn \l_@@_path_tmp_tl
@@ -508,22 +508,13 @@
     \fp_set:Nn \l_@@_path_arc_start_fp {#2}
   }
 %    \end{macrocode}
-%   The first control point: we have to undo any transformation shift
-%   here.
+%   The first control point.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_path_arc_auxiii:nn #1#2
   {
     \@@_path_arc_aux_add:nn
-      {
-          \g_@@_path_lastx_dim
-        - \l_@@_transformcm_xshift_dim
-        + #1
-      }
-      {
-          \g_@@_path_lasty_dim
-        - \l_@@_transformcm_yshift_dim
-        + #2
-      }
+      { \g_@@_path_lastx_dim + #1 }
+      { \g_@@_path_lasty_dim + #2 }
   }
 %    \end{macrocode}
 %   The end point: simple arithmetic.
@@ -547,8 +538,8 @@
   {
     \tl_set:Nn \l_@@_path_tmp_tl { {#1} {#2} }
     \@@_path_arc_aux_add:nn
-      { #5 + #3 - \l_@@_transformcm_xshift_dim }
-      { #6 + #4 - \l_@@_transformcm_yshift_dim }
+      { #5 + #3 }
+      { #6 + #4 }
     \tl_put_right:Nn \l_@@_path_tmp_tl { {#3} {#4} }
   }
 \cs_new_protected:Npn \@@_path_arc_aux_add:nn #1#2
