--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -919,6 +919,38 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\@@_point_transform_noshift:n}
+% \begin{macro}[EXP]{\@@_point_transform_noshift:nn}
+%   A version with no shift: used for internal purposes.
+%    \begin{macrocode}
+\cs_new:Npn \@@_point_transform_noshift:n #1
+  {
+    \@@_point_process:nn
+      { \@@_point_transform_noshift:nn } {#1}
+  }
+\cs_new:Npn \@@_point_transform_noshift:nn #1#2
+  {
+    \bool_if:NTF \l_@@_transformcm_active_bool
+      {
+        \@@_point_to_dim:n
+          {
+            (
+                \l_@@_transformcm_aa_fp * #1
+              + \l_@@_transformcm_ba_fp * #2
+            )
+            ,
+            (
+                \l_@@_transformcm_ab_fp * #1
+              + \l_@@_transformcm_bb_fp * #2
+            )
+        }
+      }
+      { \@@_point_to_dim:n { (#1, #2) } }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
