--- a/l3trial/l3draw/l3draw-paths.dtx
+++ b/l3trial/l3draw/l3draw-paths.dtx
@@ -576,6 +576,100 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\draw_path_ellipse:nnn}
+% \begin{macro}{\@@_path_ellipse:nnnnnn}
+% \begin{macro}[EXP]
+%   {
+%     \@@_path_ellipse_arci:nnnnnn   ,
+%     \@@_path_ellipse_arcii:nnnnnn  ,
+%     \@@_path_ellipse_arciii:nnnnnn ,
+%     \@@_path_ellipse_arciv:nnnnnn
+%   }
+%   Drawing an ellipse is an optimised version of drawing an arc, in particular
+%   reusing the same constant. We need to deal with the ellipse in four parts
+%   and also deal with moving to the right place, closing it and ending up
+%   back at the center. That is handled on a per-arc basis, each in a
+%   separate auxiliary for readability.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_path_ellipse:nnn #1#2#3
+  {
+    \@@_point_process:nnn
+      {
+        \@@_point_process:nn
+          { \@@_path_ellipse:nnnnnn }
+          { \draw_point_transform:n {#1} }
+      }
+      { \@@_point_transform_noshift:n {#2} }
+      { \@@_point_transform_noshift:n {#3} }
+  }
+\cs_new_protected:Npn \@@_path_ellipse:nnnnnn #1#2#3#4#5#6
+  {
+    \use:x
+      {
+        \@@_path_moveto:nn
+          { \fp_to_dim:n { #1 + #3 } } { \fp_to_dim:n { #2 + #4 } }
+        \@@_path_ellipse_arci:nnnnnn   {#1} {#2} {#3} {#4} {#5} {#6}
+        \@@_path_ellipse_arcii:nnnnnn  {#1} {#2} {#3} {#4} {#5} {#6}
+        \@@_path_ellipse_arciii:nnnnnn {#1} {#2} {#3} {#4} {#5} {#6}
+        \@@_path_ellipse_arciv:nnnnnn  {#1} {#2} {#3} {#4} {#5} {#6}
+      }
+    \@@_softpath_closepath:
+    \@@_path_moveto:nn {#1} {#2}
+  }
+\cs_new:Npn \@@_path_ellipse_arci:nnnnnn #1#2#3#4#5#6
+  {
+    \@@_path_curveto:nnnnnn
+      { \fp_to_dim:n { #1 + #3 + #5 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #2 + #4 + #6 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #1 + #3 * \c_@@_path_ellipse_fp + #5 } }
+      { \fp_to_dim:n { #2 + #4 * \c_@@_path_ellipse_fp + #6 } }
+      { \fp_to_dim:n { #1 + #5 } }
+      { \fp_to_dim:n { #2 + #6 } }
+  }
+\cs_new:Npn \@@_path_ellipse_arcii:nnnnnn #1#2#3#4#5#6
+  {
+    \@@_path_curveto:nnnnnn
+      { \fp_to_dim:n { #1 - #3 * \c_@@_path_ellipse_fp + #5 } }
+      { \fp_to_dim:n { #2 - #4 * \c_@@_path_ellipse_fp + #6 } }
+      { \fp_to_dim:n { #1 - #3 + #5 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #2 - #4 + #6 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #1 - #3 } }
+      { \fp_to_dim:n { #2 - #4 } }
+  }
+\cs_new:Npn \@@_path_ellipse_arciii:nnnnnn #1#2#3#4#5#6
+  {
+    \@@_path_curveto:nnnnnn
+      { \fp_to_dim:n { #1 - #3 - #5 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #2 - #4 - #6 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #1 - #3 * \c_@@_path_ellipse_fp - #5 } }
+      { \fp_to_dim:n { #2 - #4 * \c_@@_path_ellipse_fp - #6 } }
+      { \fp_to_dim:n { #1 - #5 } }
+      { \fp_to_dim:n { #2 - #6 } }
+  }
+\cs_new:Npn \@@_path_ellipse_arciv:nnnnnn #1#2#3#4#5#6
+  {
+    \@@_path_curveto:nnnnnn
+      { \fp_to_dim:n { #1 + #3 * \c_@@_path_ellipse_fp - #5 } }
+      { \fp_to_dim:n { #2 + #4 * \c_@@_path_ellipse_fp - #6 } }
+      { \fp_to_dim:n { #1 + #3 - #5 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #2 + #4 - #6 * \c_@@_path_ellipse_fp } }
+      { \fp_to_dim:n { #1 + #3 } }
+      { \fp_to_dim:n { #2 + #4 } }
+  }
+\fp_const:Nn \c_@@_path_ellipse_fp { \fp_use:c { c_@@_path_arc_90_fp } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\draw_path_circle:nn}
+%   A shortcut.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_path_circle:nn #1#2
+  { \draw_path_ellipse:nnn {#1} { #2 , 0pt } { 0pt , #2 } }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
