--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -275,6 +275,13 @@
 %   \end{syntax}
 % \end{function}
 %
+% \begin{function}{\draw_path_rectangle:nn, \draw_path_rectangle_corners:nn}
+%   \begin{syntax}
+%     \cs{draw_path_rectangle:nn} \Arg{lower-left} \Arg{displacement}
+%     \cs{draw_path_rectangle_corners:nn} \Arg{lower-left} \Arg{top-right}
+%   \end{syntax}
+% \end{function}
+%
 % \begin{function}{\draw_path_close:}
 %   \begin{syntax}
 %     \cs{draw_path_close:}
