--- a/l3trial/l3draw/l3draw-paths.dtx
+++ b/l3trial/l3draw/l3draw-paths.dtx
@@ -672,6 +672,60 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsection{Rectangles}
+%
+% \begin{macro}{\draw_path_rectangle:nn}
+% \begin{macro}{\@@_path_rectangle:nnnn, \@@_path_rectangle_rounded:nnnn}
+%   Building a rectangle can be a single operation, or for rounded versions will
+%   involve step-by-step construction.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_path_rectangle:nn #1#2
+  {
+    \@@_point_process:nnn
+      {
+        \bool_if:NTF \l_@@_corner_arc_bool
+          { \@@_path_rectangle_rounded:nnnn }
+          { \@@_path_rectangle:nnnn }
+      }
+      { \draw_point_transform:n {#1} }
+      {#2}
+  }
+\cs_new_protected:Npn \@@_path_rectangle:nnnn #1#2#3#4
+  {
+    \@@_path_update_limits:nn {#1} {#2}
+    \@@_path_update_limits:nn { #1 + #3 } { #2 + #4 }
+    \@@_softpath_rectangle:nnnn {#1} {#2} {#3} {#4}
+    \@@_path_update_last:nn {#1} {#2}
+  }
+\cs_new_protected:Npn \@@_path_rectangle_rounded:nnnn #1#2#3#4
+  {
+    \draw_path_moveto:n { #1 + #3 , #2 + #4 }
+    \draw_path_lineto:n { #1 , #2 + #4 }
+    \draw_path_lineto:n { #1 , #2 }
+    \draw_path_lineto:n { #1 + #3 , #2 }
+    \draw_path_close:
+    \draw_path_moveto:n { #1 , #2 }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\draw_path_rectangle_corners:nn}
+% \begin{macro}{\@@_path_rectangle_corners:nnnn}
+%   Another shortcut wrapper.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_path_rectangle_corners:nn #1#2
+  {
+    \@@_point_process:nnn
+      { \@@_path_rectangle_corners:nnnnn {#1} }
+      {#1} {#2}
+  }
+\cs_new_protected:Npn \@@_path_rectangle_corners:nnnnn #1#2#3#4#5
+  { \draw_path_rectangle:nn {#1} { #4 - #2 , #5 - #3 } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
