--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -282,6 +282,13 @@
 %   \end{syntax}
 % \end{function}
 %
+% \begin{function}{\draw_path_grid:nnnn}
+%   \begin{syntax}
+%     \cs{draw_path_grid:nnnn} \Arg{xspace} \Arg{yspace} \Arg{lower-left} \Arg{upper-right}
+%   \end{syntax}
+%   % Note interface
+% \end{function}
+%
 % \begin{function}{\draw_path_close:}
 %   \begin{syntax}
 %     \cs{draw_path_close:}
