More docs [ci skip]
The sine/cosine curves are rather limited:
are the current forms useful?

The curve-at-time functions are entirely unused.

This documentation step completes pgfcorepathconstruct.

--- a/l3trial/l3draw/l3draw-paths.dtx
+++ b/l3trial/l3draw/l3draw-paths.dtx
@@ -67,8 +67,13 @@
 %     extremely specialised and are very complex in implementation. If the
 %     functionality is required, it is likely that it will be set up from
 %     scratch here.
-%   \item \cs{pgfpathparabola}: Seems to be usused other than defining
+%   \item \cs{pgfpathparabola}: Seems to be unused other than defining
 %     a Ti\emph{k}Z interface, which itself is then not used further.
+%   \item \cs{pgfpathsine}, \cs{pgfpathcosine}: Need to see exactly how
+%     these need to work, in particular whether a wider input range is
+%     needed and what approximation to make.
+%    \item \cs{pgfpathcurvebetweentime}, \cs{pgfpathcurvebetweentimecontinue}:
+%      These don't seem to be used at all.
 % \end{itemize}
 %
 % \begin{variable}
