Add tests for \dim_step_ functions (and correct copy-paste typos)

--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -389,7 +389,7 @@
 % \section{Dimension step functions}
 %
 % \begin{function}[added = 2018-02-18, rEXP]
-%   {\int_step_function:nnnN}
+%   {\dim_step_function:nnnN}
 %   \begin{syntax}
 %     \cs{dim_step_function:nnnN} \Arg{initial value} \Arg{step} \Arg{final value} \meta{function}
 %   \end{syntax}
@@ -1598,7 +1598,7 @@
 % \begin{macro}{\@@_step:NNnnnn}
 %   The approach here is to build a function, with a global integer
 %   required to make the nesting safe (as seen in other in line
-%   functions), and map that function using \cs{int_step_function:nnnN}.
+%   functions), and map that function using \cs{dim_step_function:nnnN}.
 %   We put a \cs{__prg_break_point:Nn} so that \texttt{map_break}
 %   functions from other modules correctly decrement \cs{g__prg_map_int}
 %   before looking for their own break point.  The first argument is
