Use a vbox for l3draw
This deals with spaces and will allow a 'harder' line on
content (must be given 'properly').

--- a/l3trial/l3draw/l3draw-scopes.dtx
+++ b/l3trial/l3draw/l3draw-scopes.dtx
@@ -94,12 +94,14 @@
 %   this data becomes more defined. It may be that a coffin construct is
 %   better here in the longer term: that may become clearer as the code is
 %   completed. Another obvious question is whether/where vertical mode should
-%   be ended (\emph{i.e.}~should this behave like a raw |\hbox| or like
-%   a coffin).
+%   be ended (\emph{i.e.}~should this behave like a raw |\vbox| or like
+%   a coffin). In contrast to \pkg{pgf}, we use a vertical box here: material
+%   between explicit instructions should not be present anyway. (Consider
+%   adding an |\everypar| hook as done for the \LaTeXe{} preamble.)
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_begin:
   {
-    \hbox_set:Nw \l_@@_main_box
+    \vbox_set:Nw \l_@@_main_box
       \driver_draw_begin:
       \dim_gset:Nn \g_@@_xmax_dim { -\c_max_dim }
       \dim_gset:Nn \g_@@_xmin_dim {  \c_max_dim }
@@ -112,7 +114,7 @@
 \cs_new_protected:Npn \draw_end:
   {
       \driver_draw_end:
-    \hbox_set_end:
+    \vbox_set_end:
     \hbox_set:Nn \l_@@_main_box
       {
         \skip_horizontal:n { -\g_@@_xmin_dim }
