--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -2660,7 +2660,7 @@
     and~so~an~implementation~is~required.
   }
 \msg_new:nnnn { xtemplate } { missing-keytype }
-  { The~key~'#1'~is missing~a~key-type~\msg_line_context:. }
+  { The~key~'#1'~is~missing~a~key-type~\msg_line_context:. }
   {
     \c__msg_coding_error_text_tl
     Key~interface~definitions~should~be~of~the~form\\
