Doc improvements [ci skip]

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -178,6 +178,8 @@
 % Notice that in contrast to \pkg{pgf} it is possible to give the positions
 % of points \emph{directly}.
 %
+% \subsubsection{Basic point functions}
+%
 % \begin{function}[EXP]{\draw_point:nn}
 %   \begin{syntax}
 %     \cs{draw_point:nn} \Arg{x} \Arg{y}
@@ -234,10 +236,11 @@
 %     \cs{draw_point_transform:n} \Arg{point}
 %   \end{syntax}
 %   Evaluates the position of the \meta{point} subject to the current
-%   transformation matrix.
+%   transformation matrix. This operation is applied automatically by
+%   most higher-level functions (\emph{e.g.}~path manipulations).
 % \end{function}
 %
-% \subsection{Points on a vector basis}
+% \subsubsection{Points on a vector basis}
 %
 % As well as giving explicit values, it is possible to describe points
 % in terms of underlying direction vectors. The latter are initially
@@ -279,7 +282,7 @@
 %   whilst in \pkg{pgf} they use the same function and a keyword.
 % \end{function}
 %
-% \subsection{Intersection and interpolation}
+% \subsubsection{Intersections}
 %
 % \begin{function}[EXP]{\draw_point_intersect_lines:nnnn}
 %   \begin{syntax}
@@ -304,6 +307,8 @@
 %   Note the interface here has a different argument ordering from that in
 %   \pkg{pgf}, which has the two centers then the two radii.
 % \end{function}
+%
+% \subsubsection{Interpolations}
 %
 % \begin{function}[EXP]{\draw_point_interpolate_line:nnn}
 %   \begin{syntax}
@@ -479,31 +484,39 @@
 % \begin{function}{\draw_transform_concat:nnnnn}
 %   \begin{syntax}
 %     \cs{draw_transform_concat:nnnnn}
-%       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{coord expr}
+%       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{vector}
 %   \end{syntax}
-%   Appends the given matrix to the currently-active one.
+%   Appends the given transformation to the currently-active one. The
+%   transformation is made up of a matrix \meta{a_, \meta{b}, \meta{c} and
+%   \meta{d}, and a shift by the \meta{vector}.
 % \end{function}
 %
 % \begin{function}{\draw_transform:nnnnn}
 %   \begin{syntax}
 %     \cs{draw_transform:nnnnn}
-%       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{coord expr}
+%       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{vector}
 %   \end{syntax}
-%   Applies the transformation matrix specified.
+%   Applies the transformation matrix specified, over-writing any existing
+%   matrix. The transformation is made up of a matrix \meta{a_, \meta{b},
+%   \meta{c} and \meta{d}, and a shift by the \meta{vector}.
 % \end{function}
 %
 % \begin{function}{\draw_transform_triangle:nnn}
 %   \begin{syntax}
-%     \cs{draw_transform:nnn}
-%       \Arg{origin} \Arg{point expr1} \Arg{point expr2}
+%     \cs{draw_transform_triangle:nnn}
+%       \Arg{origin} \Arg{point1} \Arg{point2}
 %   \end{syntax}
+%   Applies a transformation such that the co-ordinates $(0, 0)$, $(1, 0)$
+%   and $(0, 1)$ are given by the \meta{origin}, \meta{point1} and
+%   \meta{point2}, respectively.
 % \end{function}
 %
 % \begin{function}{\draw_transform_invert:}
 %   \begin{syntax}
 %     \cs{draw_transform_invert:}
 %   \end{syntax}
-%   Inverts the current transformation matrix.
+%   Inverts the current transformation matrix and reverses the current
+%   shift vector.
 % \end{function}
 %
 % \end{documentation}
