--- a/l3experimental/l3color-extras/l3color-extras.dtx
+++ b/l3experimental/l3color-extras/l3color-extras.dtx
@@ -9,7 +9,7 @@
 %
 %    http://www.latex-project.org/lppl.txt
 %
-% This file is part of the "l3kernel bundle" (The Work in LPPL)
+% This file is part of the "l3experimental bundle" (The Work in LPPL)
 % and all files in that bundle must be distributed together.
 %
 % -----------------------------------------------------------------------
