--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3color-extras.dtx Copyright(C) 2017 The LaTeX3 Project
+%% File: l3color.dtx Copyright(C) 2017-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -32,7 +32,7 @@
 % \fi
 %
 % \title{^^A
-%   The \textsf{l3color-extras} package\\ Experimental additions to color support^^A
+%   The \textsf{l3color} package\\ Experimental color support^^A
 % }
 %
 % \author{^^A
@@ -222,7 +222,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3color-extras} Implementation}
+% \section{\pkg{l3color} Implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
@@ -234,8 +234,8 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3color-extras}{2017/12/16}{}
-  {L3 Experimental additions to color support}
+\ProvidesExplPackage{l3color}{2017/12/16}{}
+  {L3 Experimental color support}
 %</package>
 %    \end{macrocode}
 %
