--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3color.dtx Copyright(C) 2011,2012,2014,2016,2017 The LaTeX3 Project
+%% File: l3color-base.dtx Copyright(C) 2011,2012,2014,2016-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -29,7 +29,7 @@
 % \fi
 %
 % \title{^^A
-%   The \textsf{l3color} package\\ Color support^^A
+%   The \textsf{l3color-base} package\\ Color support^^A
 % }
 %
 % \author{^^A
@@ -113,7 +113,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3color} Implementation}
+% \section{\pkg{l3color-base} Implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
