--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -447,7 +447,7 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \DocInput{l3regex.dtx}
 \DocInput{l3box.dtx}
 \DocInput{l3coffins.dtx}
-\DocInput{l3color.dtx}
+\DocInput{l3color-base.dtx}
 \DocInput{l3sys.dtx}
 \DocInput{l3deprecation.dtx}
 \DocInput{l3candidates.dtx}
