More notes [ci skip]

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -481,7 +481,9 @@
 % \subsection{Transformations}
 %
 % Points are normally used unchanged relative to the canvas axes. This can
-% be modified by applying a transformation matrix.
+% be modified by applying a transformation matrix. The canvas axes themselves
+% may be adjusted using \cs{driver_draw_transformcm:nnnnnn}: note that this
+% is transparent to the drawing code so is not tracked.
 %
 % \begin{function}{\draw_transform_reset:}
 %   \begin{syntax}
