Use @@ syntax for main color tl

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -446,7 +446,7 @@
       }
       {
         \__kernel_msg_error:nnn { color } { unknown-color } {#3}
-        \tl_set_eq:NN \l__color_current_tl \l_@@_named_black_tl
+        \tl_set_eq:NN \l_@@_current_tl \l_@@_named_black_tl
       }
   }
 %    \end{macrocode}
@@ -631,9 +631,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_select:
   {
-    \@@_finalise:N \l__color_current_tl
-    \tl_set_eq:cN { l_@@_named_ . _tl } \l__color_current_tl
-    \__driver_color_select:V \l__color_current_tl
+    \@@_finalise:N \l_@@_current_tl
+    \tl_set_eq:cN { l_@@_named_ . _tl } \l_@@_current_tl
+    \__driver_color_select:V \l_@@_current_tl
   }
 \cs_new_protected:Npn \@@_finalise:N #1
   {
@@ -665,12 +665,12 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_select:n #1
   {
-    \@@_parse:nN {#1} \l__color_current_tl
+    \@@_parse:nN {#1} \l_@@_current_tl
     \@@_select:
   }
 \cs_new_protected:Npn \color_select:nn #1#2
   {
-    \@@_direct:nnN {#1} {#2} \l__color_current_tl
+    \@@_direct:nnN {#1} {#2} \l_@@_current_tl
     \@@_select:
   }
 %    \end{macrocode}
@@ -741,7 +741,7 @@
       {
         \tl_clear_new:c { l_@@_named_ #1 _tl }
         \str_if_eq:nnTF {#2} { . }
-          { \tl_set_eq:cN { l_@@_named_ #1 _tl } \l__color_current_tl }
+          { \tl_set_eq:cN { l_@@_named_ #1 _tl } \l_@@_current_tl }
           { \tl_set_eq:cc { l_@@_named_ #1 _tl } { l_@@_named_ #2 _tl } }
       }
       {
