Simplify driver fp handling
At this level, the only expressions should be when
strictly required (e.g. for bp generation).

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -383,7 +383,7 @@
 %       \Arg{black}
 %   \end{syntax}
 %   Sets the color for drawing to the CMYK values specified, all of which are
-%   fp expressions which should evaluate to between $0$ and $1$. The
+%   fp denotations in the range $0$ and $1$. The
 %   \texttt{fill} and \texttt{stroke} versions set only the color for those
 %   operations. Note that the general setting is more efficient with some
 %   drivers so should in most cases be preferred.
@@ -399,7 +399,7 @@
 %     \cs{driver_draw_color_gray:n} \Arg{gray}
 %   \end{syntax}
 %   Sets the color for drawing to the grayscale value specified, which is
-%   fp expressions which should evaluate to between $0$ and $1$. The
+%  fp denotations in the range $0$ and $1$. The
 %   \texttt{fill} and \texttt{stroke} versions set only the color for those
 %   operations. Note that the general setting is more efficient with some
 %   drivers so should in most cases be preferred.
@@ -415,7 +415,7 @@
 %     \cs{driver_draw_color_rgb:nnn} \Arg{red} \Arg{green} \Arg{blue}
 %   \end{syntax}
 %   Sets the color for drawing to the RGB values specified, all of which are
-%   fp expressions which should evaluate to between $0$ and $1$. The
+%   fp denotations in the range $0$ and $1$. The
 %   \texttt{fill} and \texttt{stroke} versions set only the color for those
 %   operations. Note that the general setting is more efficient with some
 %   drivers so should in most cases be preferred.
@@ -1103,7 +1103,7 @@
       { \dim_to_decimal_in_bp:n {#1} ~ setlinewidth }
   }
 \cs_new_protected:Npn \driver_draw_miterlimit:n #1
-  { \@@_draw_literal:x { \fp_eval:n {#1} ~ setmiterlimit } }
+  { \@@_draw_literal:n { #1 ~ setmiterlimit } }
 \cs_new_protected:Npn \driver_draw_cap_butt:
   { \@@_draw_literal:n { 0 ~ setlinecap } }
 \cs_new_protected:Npn \driver_draw_cap_round:
@@ -1154,81 +1154,42 @@
   }
 \cs_new_protected:Npn \driver_draw_color_cmyk:nnnn #1#2#3#4
   {
-    \@@_draw_literal:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-        setcmykcolor ~
-      }
+    \@@_draw_literal:n { #1 ~ #2 ~ #3 ~ #4 ~ setcmykcolor }
     \@@_draw_color_reset:
   }
 \cs_new_protected:Npn \driver_draw_fill_cmyk:nnnn #1#2#3#4
   {
-    \@@_draw_literal:x
-      {
-        /l3fc ~
-          {
-            \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-            \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-            setcmykcolor
-          } ~
-        def
-      }
+    \@@_draw_literal:n
+      { /l3fc ~ { #1 ~ #2 ~ #3 ~ #4 ~ setcmykcolor ~ } ~ def }
   }
 \cs_new_protected:Npn \driver_draw_stroke_cmyk:nnnn #1#2#3#4
   {
-    \@@_draw_literal:x
-      {
-        /l3sc ~
-          {
-            \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-            \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-            setcmykcolor
-          } ~
-        def
-      }
+    \@@_draw_literal:n
+      { /l3sc ~ { #1 ~ #2 ~ #3 ~ #4 ~ setcmykcolor ~ } ~ def }
   }
 \cs_new_protected:Npn \driver_draw_color_gray:n #1
   {
-    \@@_draw_literal:x { fp_eval:n {#1} ~ setgray  }
+    \@@_draw_literal:n { #1 ~ setgray  }
     \@@_draw_color_reset:
   }
 \cs_new_protected:Npn \driver_draw_fill_gray:n #1
-  { \@@_draw_literal:x { /l3fc ~ { \fp_eval:n {#1} ~ setgray } ~ def } }
+  { \@@_draw_literal:n { /l3fc ~ { #1 ~ setgray } ~ def } }
 \cs_new_protected:Npn \driver_draw_stroke_gray:n #1
-  { \@@_draw_literal:x { /l3sc ~ { \fp_eval:n {#1} ~ setgray } ~ def } }
+  { \@@_draw_literal:n { /l3sc ~ { #1 ~ setgray } ~ def } }
 \cs_new_protected:Npn \driver_draw_color_rgb:nnn #1#2#3
   {
-    \@@_draw_literal:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~
-        setrgbcolor
-      }
+    \@@_draw_literal:n { #1 ~ #2 ~ #3 ~ setrgbcolor }
     \@@_draw_color_reset:
   }
 \cs_new_protected:Npn \driver_draw_fill_rgb:nnn #1#2#3
   {
-    \@@_draw_literal:x
-      {
-        /l3fc ~
-          {
-            \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~
-            setrgbcolor
-          } ~
-        def
-      }
+    \@@_draw_literal:n
+      { /l3fc ~ { #1 ~ #2 ~ #3 ~ setrgbcolor } ~ def }
   }
 \cs_new_protected:Npn \driver_draw_stroke_rgb:nnn #1#2#3
   {
-    \@@_draw_literal:x
-      {
-        /l3sc ~
-          {
-            \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~
-            setrgbcolor
-          } ~
-        def
-      }
+    \@@_draw_literal:n
+      { /l3sc ~ { #1 ~ #2 ~ #3 ~ setrgbcolor } ~ def }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1246,8 +1207,7 @@
     \@@_draw_literal:x
       {
         [
-          \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-          \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
+          #1 ~ #2 ~ #3 ~ #4 ~
           \dim_to_decimal_in_bp:n {#5} ~ \dim_to_decimal_in_bp:n {#6} ~
         ] ~
         concat
@@ -2063,7 +2023,7 @@
       { \dim_to_decimal_in_bp:n {#1} ~ w }
   }
 \cs_new_protected:Npn \driver_draw_miterlimit:n #1
-  { \@@_draw_literal:x { \fp_eval:n {#1} ~ M } }
+  { \@@_draw_literal:x { #1 ~ M } }
 \cs_new_protected:Npn \driver_draw_cap_butt:
   { \@@_draw_literal:n { 0 ~ J } }
 \cs_new_protected:Npn \driver_draw_cap_round:
@@ -2089,100 +2049,48 @@
 %     \driver_draw_fill_cmyk:nnnn   ,
 %     \driver_draw_stroke_cmyk:nnnn
 %   }
-% \begin{macro}{\@@_draw_color_cmyk_aux:nnnn}
 % \begin{macro}
 %   {
 %     \driver_draw_color_gray:n        ,
 %     \driver_draw_fill_gray:n   ,
 %     \driver_draw_stroke_gray:n
 %   }
-% \begin{macro}{\@@_draw_color_gray_aux:n}
 % \begin{macro}
 %   {
 %     \driver_draw_color_rgb:nnn        ,
 %     \driver_draw_fill_rgb:nnn   ,
 %     \driver_draw_stroke_rgb:nnn
 %   }
-% \begin{macro}{\@@_draw_color_rgb_aux:nnn}
 %   Yet more fast conversion, all using the FPU to allow for expressions
 %   in numerical input.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_draw_color_cmyk:nnnn #1#2#3#4
-  {
-    \use:x
-      {
-        \@@_draw_color_cmyk_aux:nnnn
-          { \fp_eval:n {#1} }
-          { \fp_eval:n {#2} }
-          { \fp_eval:n {#3} }
-          { \fp_eval:n {#4} }
-      }
-  }
-\cs_new_protected:Npn \@@_draw_color_cmyk_aux:nnnn #1#2#3#4
   {
     \@@_draw_literal:n
       { #1 ~ #2 ~ #3 ~ #4 ~ k ~ #1 ~ #2 ~ #3 ~ #4 ~ K }
   }
 \cs_new_protected:Npn \driver_draw_fill_cmyk:nnnn #1#2#3#4
   {
-    \@@_draw_literal:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-        k
-      }
+    \@@_draw_literal:n { #1 ~ #2 ~ #3 ~ #4 ~ k }
   }
 \cs_new_protected:Npn \driver_draw_stroke_cmyk:nnnn #1#2#3#4
-  {
-    \@@_draw_literal:x
-      {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
-        K
-      }
-  }
+  { \@@_draw_literal:n { #1 ~ #2 ~ #3 ~ #4 ~ K } }
 \cs_new_protected:Npn \driver_draw_color_gray:n #1
-  {
-    \use:x
-      { \@@_draw_color_gray_aux:n { \fp_eval:n {#1} } }
-  }
-\cs_new_protected:Npn \@@_draw_color_gray_aux:n #1
-  {
-    \@@_draw_literal:n { #1 ~ g ~ #1 ~ G }
-  }
+  { \@@_draw_literal:n { #1 ~ g ~ #1 ~ G } }
 \cs_new_protected:Npn \driver_draw_fill_gray:n #1
-  { \@@_draw_literal:x { \fp_eval:n {#1} ~ g } }
+  { \@@_draw_literal:n { #1 ~ g } }
 \cs_new_protected:Npn \driver_draw_stroke_gray:n #1
-  { \@@_draw_literal:x { \fp_eval:n {#1} ~ G } }
+  { \@@_draw_literal:n { #1 ~ G } }
 \cs_new_protected:Npn \driver_draw_color_rgb:nnn #1#2#3
-  {
-    \use:x
-      {
-        \@@_draw_color_rgb_aux:nnn
-          { \fp_eval:n {#1} }
-          { \fp_eval:n {#2} }
-          { \fp_eval:n {#3} }
-      }
-  }
-\cs_new_protected:Npn \@@_draw_color_rgb_aux:nnn #1#2#3
   {
     \@@_draw_literal:n
       { #1 ~ #2 ~ #3 ~ rg ~ #1 ~ #2 ~ #3 ~ RG }
   }
 \cs_new_protected:Npn \driver_draw_fill_rgb:nnn #1#2#3
-  {
-    \@@_draw_literal:x
-      { \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~ rg }
-  }
+  { \@@_draw_literal:n { #1 ~ #2 ~ #3 ~ rg } }
 \cs_new_protected:Npn \driver_draw_stroke_rgb:nnn #1#2#3
-  {
-    \@@_draw_literal:x
-      { \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~ RG }
-  }
+  { \@@_draw_literal:n { #1 ~ #2 ~ #3 ~ RG } }
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -2196,8 +2104,7 @@
   {
     \@@_draw_literal:x
       {
-        \fp_eval:n {#1} ~ \fp_eval:n {#2} ~
-        \fp_eval:n {#3} ~ \fp_eval:n {#4} ~
+        #1 ~ #2 ~ #3 ~ #4 ~
         \dim_to_decimal_in_bp:n {#5} ~ \dim_to_decimal_in_bp:n {#6} ~
         cm
       }
@@ -2713,7 +2620,7 @@
 \cs_new_protected:Npn \driver_draw_linewidth:n #1
   { \@@_draw_scope:x { stroke-width=" \dim_to_decimal:n {#1} " } }
 \cs_new_protected:Npn \driver_draw_miterlimit:n #1
-  { \@@_draw_scope:x { stroke-miterlimit=" \fp_eval:n {#1} " } }
+  { \@@_draw_scope:x { stroke-miterlimit=" #1 " } }
 \cs_new_protected:Npn \driver_draw_cap_butt:
   { \@@_draw_scope:n { stroke-linecap="butt" } }
 \cs_new_protected:Npn \driver_draw_cap_round:
