--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -85,7 +85,7 @@
 % \section{Color expressions}
 %
 % In addition to allowing specification of color by model and values,
-% \pkg{l3color-extras} also supports color expressions. These are created
+% \pkg{l3color} also supports color expressions. These are created
 % by combining one or more color names, with the amount of each specified
 % as a percentage. The latter is given between |!| symbols in the expression.
 % Thus for example
