--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -68,6 +68,8 @@
 %   \item \texttt{cmyk} Cyan-magenta-yellow-black color, with four axes, one for
 %     each of the components
 %   \item \texttt{spot} Spot color, with one value, the name of the color
+%     (see \url{https://helpx.adobe.com/indesign/using/spot-process-colors.html}
+%     for details of the use of spot colors in print)
 % \end{itemize}
 %
 % Additional models may be created to allow mixing of spot colors
