Move color model selection to l3color-(base)
This alsigns with the approach for the drawing code, and also with the
idea that the driver source does only what is required to make
everything work.

Aligning the two color paths will be required to make color selection
work properly in drawings.

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -635,7 +635,7 @@
   {
     \@@_finalise:N \l_@@_current_tl
     \tl_set_eq:cN { l_@@_named_ . _tl } \l_@@_current_tl
-    \__driver_color_select:V \l_@@_current_tl
+    \@@_select:V \l_@@_current_tl
   }
 \cs_new_protected:Npn \@@_finalise:N #1
   {
