Basic color support in l3draw

--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -155,7 +155,7 @@
 % \begin{macro}{\@@_select:n, \@@_select:V}
 % \begin{macro}{\@@_select:w}
 % \begin{macro}
-%   {\@@_split_cmyk:w, \@@_split_gray:w, \@@_split_rgb:w, \@@_split_spot:w}
+%   {\@@_select_cmyk:w, \@@_select_gray:w, \@@_select_rgb:w, \@@_select_spot:w}
 %    Take an internal color specification and pass it to the driver. This code
 %    is needed to ensure the current color but will also be used by the
 %    higher-level experimental material.
