--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -216,6 +216,34 @@
 %   and similar are not influenced by this setting.
 % \end{variable}
 %
+% \section{Core color representation}
+%
+% To allow data to be handled internally, \pkg{l3color} uses a simple
+% representation of color, based on that used by the \pkg{dvips} program.
+% This is a token list made up of the model name followed by one or more
+% data entries, each separated by a \emph{space}. The valid forms are thus
+% \begin{itemize}
+%   \item \texttt{gray \meta{gray}} Grayscale color with the \meta{gray}
+%     value running from $0$ (fully black) to $1$ (fully white)
+%   \item \texttt{cmyk \meta{cyan} \meta{magenta} \meta{yellow} \meta{black}},
+%     each of which falls in the range $[0,1]$
+%   \item \texttt{rgb \meta{red} \meta{green} \meta{blue}},
+%     each of which falls in the range $[0,1]$
+%   \item \texttt{spot \meta{name} \meta{tint}} A pre-defined spot color,
+%     where the \meta{name} should be a pre-defined string color name and the
+%     \meta{tint} should be in the range $[0,1]$.
+% \end{itemize}
+%
+% This core representation is produced when parsing color expressions.
+% 
+% \begin{function}{\color_parse:nN}
+%   \begin{syntax}
+%     \cs{color_parse:nN} \Arg{color expression} \Arg{tl}
+%   \end{syntax}
+%   Parses the \meta{color expression} as described above, and sets the
+%   \meta{tl} the the equivalent \meta{core color representation}.
+% \end{function}
+%
 % \section{Spot colors}
 % \label{l3color:sec:spot}
 %
@@ -395,8 +423,8 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{macro}{\color_parse:nN}
 % \begin{macro}{\@@_parse:nN}
-% \begin{macro}{\@@_parse_aux:nN}
 % \begin{macro}{\@@_parse:Nw}
 % \begin{macro}{\@@_parse_loop_init:Nnn}
 % \begin{macro}{\@@_parse_loop:w}
@@ -415,7 +443,7 @@
 %   otherwise expands, then starts working through the expression itself.
 %   At the end, we apply the payload.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_parse:nN #1#2
+\cs_new_protected:Npn \color_parse:nN #1#2
   {
     \group_begin:
       \seq_map_inline:Nn \l_char_active_seq
@@ -425,14 +453,14 @@
         }
       \tl_set:Nx \l_@@_tmp_tl {#1}
     \exp_args:NNV \group_end:
-    \@@_parse_aux:nN \l_@@_tmp_tl #2
+    \@@_parse:nN \l_@@_tmp_tl #2
   }
 %    \end{macrocode}
 %   Before going to all of the effort of parsing an expression, these two
 %   precursor functions look for a pre-defined name, either on its own or
 %   with a trailing |!| (which is the same thing).
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_parse_aux:nN #1#2
+\cs_new_protected:Npn \@@_parse:nN #1#2
   {
     \tl_if_exist:cTF { l_@@_named_ #1 _tl }
       { \tl_set_eq:Nc #2 { l_@@_named_ #1 _tl } }
@@ -667,7 +695,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_select:n #1
   {
-    \@@_parse:nN {#1} \l_@@_current_tl
+    \color_parse:nN {#1} \l_@@_current_tl
     \@@_select:
   }
 \cs_new_protected:Npn \color_select:nn #1#2
@@ -729,7 +757,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_set:nn #1#2
   {
-    \@@_parse:nN {#2} \l_@@_named_tl
+    \color_parse:nN {#2} \l_@@_named_tl
     \@@_store:Nn \l_@@_named_tl {#1}
   }
 \cs_new_protected:Npn \color_set:nnn #1#2#3
