--- a/l3experimental/l3draw/l3draw-state.dtx
+++ b/l3experimental/l3draw/l3draw-state.dtx
@@ -117,6 +117,73 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}{\l_@@_color_tmp_tl}
+%   Scratch space.
+%    \begin{macrocode}
+\tl_new:N \l_@@_color_tmp_tl
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\g_@@_fill_color_tl, \g_@@_stroke_color_tl}
+%   For tracking.
+%    \begin{macrocode}
+\tl_new:N \g_@@_fill_color_tl
+\tl_new:N \g_@@_stroke_color_tl
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\draw_color:n, \draw_color_fill:n, \draw_color_stroke:n}
+% \begin{macro}{\@@_color:nn}
+% \begin{macro}{\@@_color_aux:nn, \@@_color_aux:Vn}
+% \begin{macro}{\@@_color:nw}
+% \begin{macro}
+%   {
+%     \@@_select_cmyk:nw, \@@_select_gray:nw,
+%     \@@_select_rgb:nw, \@@_split_select:nw
+%   }
+%   Much the same as for core color support but calling the relevant
+%   driver-level function.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_color:n #1
+  { \@@_color:nn { } {#1} }
+\cs_new_protected:Npn \draw_color_fill:n #1
+  { \@@_color:nn { fill } {#1} }
+\cs_new_protected:Npn \draw_color_stroke:n #1
+  { \@@_color:nn { stroke } {#1} }
+\cs_new_protected:Npn \@@_color:nn #1#2
+  {
+    \color_parse:nN {#2} \l_@@_color_tmp_tl
+    \tl_if_blank:nTF {#1}
+      {
+        \tl_gset_eq:NN \g_@@_fill_color_tl \l_@@_color_tmp_tl
+        \tl_gset_eq:NN \g_@@_stroke_color_tl \l_@@_color_tmp_tl
+        \@@_color_aux:Vn \l_@@_color_tmp_tl { color }
+      }
+      {
+        \tl_gset_eq:cN { g_@@_ #1 _color_tl } \l_@@_color_tmp_tl
+        \@@_color_aux:Vn \l_@@_color_tmp_tl { #1 }
+      }
+  }
+\cs_new_protected:Npn \@@_color_aux:nn #1#2
+  { \@@_color:nw {#2} #1 \q_stop }
+\cs_generate_variant:Nn \@@_color_aux:nn { V }
+\cs_new_protected:Npn \@@_color:nw #1#2 ~ #3 \q_stop
+  { \use:c { @@_color_ #2 :nw } {#1} #3 \q_stop }
+\cs_new_protected:Npn \@@_color_cmyk:nw #1#2 ~ #3 ~ #4 ~ #5 \q_stop
+  { \use:c { driver_draw_ #1 _cmyk:nnnn } {#2} {#3} {#4} {#5} }
+\cs_new_protected:Npn \@@_color_gray:nw #1#2 \q_stop
+  { \use:c { driver_draw_ #1 _gray:n } {#2} }
+\cs_new_protected:Npn \@@_color_rgb:nw #1#2 ~ #3 ~ #4 \q_stop
+  { \use:c { driver_draw_ #1 _rgb:nnn } {#2} {#3} {#4} }
+\cs_new_protected:Npn \@@_color_spot:nw #1#2 ~ #3 \q_stop
+  { \use:c { driver_draw_ #1 _spot:nn } {#2} {#3} }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
