Add canvas path ops to l3draw
Useful for Hobby paths, and in pgf done by
simply setting \pgf@x/\pgf@y directly ...

--- a/l3experimental/l3draw/l3draw-paths.dtx
+++ b/l3experimental/l3draw/l3draw-paths.dtx
@@ -295,6 +295,34 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsection{Canvas path constructions}
+%
+% \begin{macro}{\draw_path_canvas_moveto:n, \draw_path_canvas_lineto:n}
+% \begin{macro}{\draw_path_canvas_curveto:nnn}
+%   Operations with no application of the transformation matrix.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_path_canvas_moveto:n #1
+  { \@@_point_process:nn { \@@_path_moveto:nn } {#1} }
+  }
+\cs_new_protected:Npn \draw_path_canvas_lineto:n #1
+  { \@@_point_process:nn { \@@_path_lineto:nn } {#1} }
+\cs_new_protected:Npn \draw_path_canvas_curveto:nnn #1#2#3
+  {
+    \@@_point_process:nnn
+      {
+        \@@_point_process:nn
+          {
+            \@@_path_mark_corner:
+            \@@_path_curveto:nnnnnn
+          }
+          {#1}
+      }
+      {#2} {#3}
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Computed curves}
 %
 % More complex operations need some calculations. To assist with those, various
