--- a/l3experimental/l3draw/l3draw-transforms.dtx
+++ b/l3experimental/l3draw/l3draw-transforms.dtx
@@ -291,6 +291,61 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}
+%   {\draw_transform_scale:n, \draw_transform_xscale:n, \draw_transform_yscale:n}
+% \begin{macro}
+%   {\draw_transform_shift:n, \draw_transform_xshift:n, \draw_transform_yshift:n}
+% \begin{macro}
+%   {\draw_transform_xslant:n, \draw_transform_yslant:n}
+%   Lots of shortcuts.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_transform_scale:n #1
+  { \draw_transform_concat:nnnnn { #1 } { 0 } { 0 } { #1 } { 0 , 0 } }
+\cs_new_protected:Npn \draw_transform_xscale:n #1
+  { \draw_transform_concat:nnnnn { #1 } { 0 } { 0 } { 1 } { 0 , 0 } }
+\cs_new_protected:Npn \draw_transform_yscale:n #1
+  { \draw_transform_concat:nnnnn { 1 } { 0 } { 0 } { #1 } { 0 , 0 } }
+\cs_new_protected:Npn \draw_transform_shift:n #1
+  { \draw_transform_concat:nnnnn { 1 } { 0 } { 0 } { 1 } {#1} }
+\cs_new_protected:Npn \draw_transform_xshift:n #1
+  { \draw_transform_concat:nnnnn { 1 } { 0 } { 0 } { 1 } { #1 , 0 } }
+\cs_new_protected:Npn \draw_transform_yshift:n #1
+  { \draw_transform_concat:nnnnn { 1 } { 0 } { 0 } { 1 } { 0 , #1 } }
+\cs_new_protected:Npn \draw_transform_xslant:n #1
+  { \draw_transform_concat:nnnnn { 1 } { 0 } { #1 } { 1 } { 0 , 0 } }
+\cs_new_protected:Npn \draw_transform_yslant:n #1
+  { \draw_transform_concat:nnnnn { 1 } { #1 } { 0 } { 1 } { 0 , 0 } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\draw_transform_rotate:n}
+% \begin{macro}
+%   {
+%     \@@_transform_rotate:n, \@@_transform_rotate:f,
+%     \@@_transform_rotate:nn, \@@_transform_rotate:ff
+%   } 
+%   Slightly more involved: evaluate the angle only once, and the sine and
+%   cosine only once.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_transform_rotate:n #1
+  { \@@_transform_rotate:f { \fp_eval:n {#1} } }
+\cs_new_protected:Npn \@@_transform_rotate:n #1
+  {
+    \@@_transform_rotate:ff 
+      { \fp_eval:n { cosd(#1) } }
+      { \fp_eval:n { sind(#1) } }
+  }
+\cs_generate_variant:Nn \@@_transform_rotate:n { f }
+\cs_new_protected:Npn \@@_transform_rotate:nn #1#2
+  { \draw_transform_concat:nnnnn {#1} {#2} { -#2 } { #1 } { 0 , 0 } }
+\cs_generate_variant:Nn \@@_transform_rotate:nn { ff }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
