--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -539,11 +539,14 @@
 % may be adjusted using \cs{driver_draw_transformcm:nnnnnn}: note that this
 % is transparent to the drawing code so is not tracked.
 %
-% \begin{function}{\draw_transform_reset:}
+% \begin{function}{\draw_transform:nnnnn}
 %   \begin{syntax}
-%     \cs{draw_transform_reset:}
+%     \cs{draw_transform:nnnnn}
+%       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{vector}
 %   \end{syntax}
-%   Resets the matrix to the identity.
+%   Applies the transformation matrix specified, over-writing any existing
+%   matrix. The transformation is made up of a matrix \meta{a}, \meta{b},
+%   \meta{c} and \meta{d}, and a shift by the \meta{vector}.
 % \end{function}
 %
 % \begin{function}{\draw_transform_concat:nnnnn}
@@ -556,16 +559,6 @@
 %   \meta{d}, and a shift by the \meta{vector}.
 % \end{function}
 %
-% \begin{function}{\draw_transform:nnnnn}
-%   \begin{syntax}
-%     \cs{draw_transform:nnnnn}
-%       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{vector}
-%   \end{syntax}
-%   Applies the transformation matrix specified, over-writing any existing
-%   matrix. The transformation is made up of a matrix \meta{a}, \meta{b},
-%   \meta{c} and \meta{d}, and a shift by the \meta{vector}.
-% \end{function}
-%
 % \begin{function}{\draw_transform_triangle:nnn}
 %   \begin{syntax}
 %     \cs{draw_transform_triangle:nnn}
@@ -576,12 +569,67 @@
 %   \meta{point2}, respectively.
 % \end{function}
 %
+% \begin{function}{\draw_transform_rotate:n}
+%   \begin{syntax}
+%     \cs{draw_transform_rotate:n} \Arg{angle}
+%   \end{syntax}
+%   Applies a roation by the \meta{angle}, measured anti-clockwise in degrees.
+%   This rotation is \emph{additional} to any prevailing transformation.
+% \end{function}
+%
+% \begin{function}
+%   {
+%     \draw_transform_scale:n,
+%     \draw_transform_xscale:n,
+%     \draw_transform_xscale:n
+%   }
+%   \begin{syntax}
+%     \cs{draw_transform_scale:n} \Arg{scale}
+%   \end{syntax}
+%   Applies the \meta{scale} in either $x$ or $y$ (or both).
+%   This scale is \emph{added} to any prevailing transformation.
+% \end{function}
+%
+% \begin{function}
+%   {
+%     \draw_transform_shift:n,
+%     \draw_transform_xshift:n,
+%     \draw_transform_yshift:n
+%   }
+%   \begin{syntax}
+%     \cs{draw_transform_shift:n} \Arg{vector}
+%     \cs{draw_transform_xshift:n} \Arg{xshift}
+%   \end{syntax}
+%   Applies a shift of the \meta{vector} in $(x, y)$ or an \meta{xshift} or
+%   \meta{yshift}, as appropriate. This shift is \emph{added} to any prevailing
+%   transformation.
+% \end{function}
+%
+% \begin{function}
+%   {
+%     \draw_transform_xslant:n,
+%     \draw_transform_yslant:n
+%   }
+%   \begin{syntax}
+%     \cs{draw_transform_xslant:n} \Arg{slant}
+%   \end{syntax}
+%   Applies the \meta{slant} (a factor) in either $x$ or $y$.
+%   This slant is \emph{added} to any prevailing transformation.
+% \end{function}
+%
 % \begin{function}{\draw_transform_invert:}
 %   \begin{syntax}
 %     \cs{draw_transform_invert:}
 %   \end{syntax}
 %   Inverts the current transformation matrix and reverses the current
 %   shift vector.
+% \end{function}
+%
+% \begin{function}{\draw_transform_reset:}
+%   \begin{syntax}
+%     \cs{draw_transform_reset:}
+%   \end{syntax}
+%   Resets the matrix to the identity.
 % \end{function}
 %
 % \end{documentation}
