One more doc bit [ci skip]

--- a/l3experimental/l3draw/l3draw-transforms.dtx
+++ b/l3experimental/l3draw/l3draw-transforms.dtx
@@ -63,6 +63,8 @@
 % following are currently absent:
 % \begin{itemize}
 %   \item \cs{pgfgettransform}, \cs{pgfgettransformentries}: Awaiting use cases.
+%   \item \cs{pgftransformresetnontranslations}: Ideally trying to come up
+%     with a \enquote{cleaner} name.
 %   \item \cs{pgftransformlineattime}, \cs{pgftransformarcaxesattime}, 
 %     \cs{pgftransformcurveattime}: Need to look at the use cases for
 %     these to fully understand them.
