Some tweaks to low-level draw text boxes
I suspect there is more to do here!

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -2131,16 +2131,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_draw_hbox:Nnnnnnn #1#2#3#4#5#6#7
   {
-    \hbox_set:Nn \l_@@_tmp_box
+    \hbox_set_to_wd:Nnn \l_@@_tmp_box { 0pt }
       {
-        \tex_kern:D \__dim_eval:n {#6}
-        \@@_scope_begin:
-        \driver_draw_transformcm:nnnnnn {#2} {#3} {#4} {#5}
-          { 0pt } { 0pt }
+        \tex_kern:D \dim_eval:n {#6}
+        \driver_draw_scope_begin:
+        \driver_draw_transformcm:nnnnnn {#2} {#3} {#4} {#5} { 0pt } { 0pt }
         \box_move_up:nn {#7} { \box_use:N #1 }
-        \@@_scope_end:
+        \driver_draw_scope_end:
       }
-    \box_set_wd:Nn \l_@@_tmp_box { 0pt }
     \box_set_ht:Nn \l_@@_tmp_box { 0pt }
     \box_set_dp:Nn \l_@@_tmp_box { 0pt }
     \box_use:N \l_@@_tmp_box
