--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1157,8 +1157,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_draw_color_reset:
   {
-    \@@_draw_literal:n { currentdic~/l3fc~known~{ /l3fc~ { } ~def }~if }
-    \@@_draw_literal:n { currentdic~/l3sc~known~{ /l3sc~ { } ~def }~if }
+    \@@_draw_literal:n { currentdict~/l3fc~known~{ /l3fc~ { } ~def }~if }
+    \@@_draw_literal:n { currentdict~/l3sc~known~{ /l3sc~ { } ~def }~if }
   }
 \cs_new_protected:Npn \driver_draw_color_cmyk:nnnn #1#2#3#4
   {
