More doc detail [ci skip]

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -563,9 +563,9 @@
 %     \draw_begin:
 %       \draw_path_moveto:n { 0cm , 0cm }
 %       \draw_path_curveto:nnn
-%         { 1cm , 1cm }
-%         { 2cm , 1cm }
-%         { 3cm , 0cm }
+%         { 1cm , 1cm } % First control
+%         { 2cm , 1cm } % Second control
+%         { 3cm , 0cm } % End
 %       \draw_color_fill:n {  yellow!80!black }
 %       \draw_path_use_clear:n { fill , stroke }
 %     \draw_end:
